# felix

./: .coverage  .env.example  .gitignore  JOURNAL.md  PROJECT.md  README.md  REVIEW.md  docker-compose.yml  justfile  pyproject.toml  test.md
.claude/commands/: check-history.md
data/scenes/: 001-la-poussiere.txt  002-l-orbite.txt  elysium-001.md  elysium-002.md  eval-ephemeral-physical.txt  eval-fantasy-redeyes.txt  test-001-le-signal.txt  test-002-le-convoi.txt  test-003-la-frequence.txt  the_fellowship_of_the_ring.md
evals/: _runner.py  _utils.py  conftest.py  evaluators.py  expected.py  judge.py  run_evals.py  task.py  test_heuristics.py  test_judge.py
evals/fixtures/: 05_contradiction.txt  06_flashback.txt  07_reldate.txt
evals/fixtures/convoi/: test-001-le-signal.txt  test-002-le-convoi.txt  test-003-la-frequence.txt
evals/fixtures/groups/: 01_interception.txt
evals/fixtures/helios/: 01_signal.txt  02_rapport.txt  03_intrusion.txt  04_famille.txt  05_contradiction.txt  06_flashback.txt  07_reldate.txt
evals/fixtures/profiler_attribution/: 01_le_conseil.txt  02_les_plaines.txt  03_l_embuscade.txt
evals/fixtures/profiler_relations/: 01_le_banquet.txt  02_la_route.txt  03_le_col.txt
evals/fixtures/segmentation/: long-mission.txt
evals/ingest/: evaluators.py  run_evals.py  task.py
evals/pipeline/: evaluators.py  task.py
evals/results/: history.jsonl
plans/: context_reminder.md  eval_pipeline.md  graph_consistency.md  incremental_pipeline.md
scripts/: seed_all.py
src/felix/: cli.py  config.py  llm.py  telemetry.py
src/felix/agent/: chat_agent.py  deps.py  tools.py
src/felix/api/: deps.py  main.py  models.py
src/felix/db/: formatters.py  queries.py  repository.py  schema.py  seed.py
src/felix/graph/: checks.py  driver.py  formatters.py  repository.py  schema.py  seed.py  writer.py
src/felix/ingest/: analyzer.py  checker.py  cleaner.py  entity_checker.py  loader.py  models.py  orchestrator.py  pipeline.py  profiler.py  resolution.py  resolver.py  segmenter.py  utils.py
src/felix/vectorstore/: seed.py  store.py
tests/: conftest.py  test_character_crud.py  test_formatters.py  test_ingest_queries.py  test_pipeline.py  test_profiler_and_repository.py  test_queries.py  test_resolver.py  test_segmenter.py  test_vectorstore.py
tools/: view_history.py
web/: eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml
web/app/: app.config.ts
web/app/components/: AppNavbar.vue  AppSidebar.vue  CharacterCard.vue  ChatMessage.vue  GroupCard.vue  LocationCard.vue  SettingsPanel.vue
web/app/composables/: useCharacters.ts  useFelix.ts  useGroups.ts  (+6 more)
(+34 files in other folders)
