[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "felix"
version = "0.1.0"
description = "Screenplay continuity assistant"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Renaud Cepre", email = "renaudcepre@protonmail.com" }
]
dependencies = [
    "pydantic-ai[mistral]",
    "mistralai>=1.9.11,<2.0",
    "pydantic-settings>=2.0",
    "chromadb>=1.0",
    "aiosqlite>=0.20",
    "rich>=14.3.3",
    "fastapi[standard]>=0.115",
    "rapidfuzz>=3.0",
    "sentence-transformers>=3.0",
    "typer>=0.24.1",
    "kuzu>=0.8",
]

[project.scripts]
felix = "felix.cli:main"
felix-api = "felix.api.main:cli"
felix-export = "felix.cli:export"

[tool.setuptools.packages.find]
where = ["src"]
include = ["felix*"]

[tool.ruff]
output-format = "concise"
line-length = 88

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "E", "W", # pycodestyle
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "PL",    # Pylint
    "RUF",   # Ruff-specific
    "SIM",   # flake8-simplify
    "C4",    # flake8-comprehensions
    "RET",   # flake8-return
    "S",     # flake8-bandit
    "ASYNC", # flake8-async
    "TCH",   # flake8-type-checking
    "PYI",   # flake8-pyi
    "N",     # pep8-naming
    "T20",   # flake8-print
    "PIE",   # flake8-pie
    "D212",  # pydocstyle (multiline docstring)
]
ignore = [
    "E501",  # Line length handled by formatter
    "S101",  # Allow assert (pytest)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR2004",  # Magic value used in comparison
    "PLR0913",  # Many arguments in parametrized tests
    "S604",     # shell=True in tests
]
"src/felix/cli.py" = [
    "T201",     # print allowed in CLI
]
"scripts/**" = [
    "T201",     # print allowed in scripts
]
"evals/**" = [
    "T201",      # print allowed in eval scripts
    "PLR2004",   # magic values in comparisons
    "S101",      # assert allowed
]
"src/felix/agent/tools.py" = [
    "TCH001", "TCH002",  # pydantic-ai resolves type hints at runtime
]
"src/felix/api/**" = [
    "T201",     # print allowed in API entry point
    "PLC0415",  # lazy import uvicorn in cli()
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "eval: LLM judge eval tests (require a running model)",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3.0",
    "mypy>=1.10",
    "ruff>=0.11",
]
